--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
   "private": true,
   "trustedDependencies": [
     "esbuild",
-    "sharp"
+    "sharp",
+    "workerd"
   ],
   "trustedDependencies-annotation": "Needed for bun to allow running install scripts",
   "type": "module",
   "scripts": {
+    "postinstall": "bun pm trust --all",
     "build": "qwik build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
